[package]
name = "regulators"
version = "0.1.0"
authors = ["merkes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rusoto_core = "0.42"
rusoto_dynamodb = "0.42"
rusoto_lambda = "0.42"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_dynamodb = "0.4.1"
serde_json = "1.0.42"
uuid = { version = "0.8", features = ["v4"] }
